# clip-mma

./: .gitignore  .pre-commit-config.yaml  README.md  clip_extension.py  pyproject.toml  requirements.txt  run_learner.py  test_checkpoint.py
fomo/evaluation/: dataset_result.py
fomo/metrics/: __init__.py
fomo/models/: __init__.py  _base_model.py  clip_classifier.py
fomo/models/adapters/: simple_mlp_adapter.py
fomo/models/clip/: __init__.py  clip_adapter.py  clip_base.py  clip_extension.py  clip_linear.py  clip_mlp_head.py  clip_mm_mlp_adapter.py  clip_transformer.py  clip_transformer_adapter.py  clip_transformer_adapter_text.py  clip_transformer_downscaled.py  clip_transformer_w_hypernet.py  clip_with_adapter.py  masked_multi_head_attention.py
fomo/models/clip/ablations/: clip_mha_adapter.py  (+3 more)
fomo/pipelines/: analyze.py  evaluate.py  precompute_embeddings.py  train.py
fomo/pipelines/types/: learner_args.py
fomo/pipelines/utils/: initializers.py  utils.py
fomo/training/: trainer.py
fomo/utils/data/: utils.py
notebooks/: clip_test.ipynb  comparing_models_trained_on_noise.ipynb  examples.ipynb  extension-Copy1.ipynb  extension.ipynb  generate_clip_embeddings_datasets.ipynb  hp_search.ipynb  res1.csv  res2.csv  testing.ipynb  viz.ipynb
notebooks/wandb/: latest-run
notebooks/wandb/run-20240508_182403-4yjeq7jh/: run-4yjeq7jh.wandb
notebooks/wandb/run-20240508_182519-xjrn4o0o/: run-xjrn4o0o.wandb
scripts/: analyze.py  run_experiment.py
src/metrics/: _base_metric.py
src/models/: _base_model.py  clip_classifier.py
src/pipelines/: evaluate.py
(+21 files in other folders)
